--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "grunt-json-server",
   "description": "Give it a JSON or JS seed file and it will serve it through REST routes.",
   "version": "0.1.1",
-  "private": true
+  "private": true,
   "homepage": "https://github.com/tfiwm/grunt-json-server",
   "author": {
     "name": "Mitko Tschimev",
